--- a/proof/cases/progress/sa.tex
+++ b/proof/cases/progress/sa.tex
@@ -10,12 +10,12 @@ $e_{A}^{1}=\overline{n}$ by canonical forms (Lemma \ref{cf}).  $SA^{N}\;\overlin
 \begin{subcase}
 $T=T_{1}\rightarrow T_{2}$
 
-$e_{A}^{1}=\lambda x_{1}:T_{1}.e_{A}^{3}$ by canonical forms (Lemma \ref{cf}).  $SA^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{A}^{3})\rightarrow\lambda x_{2}:T_{1}[T_{i}/T^{a}_{i}].(SA^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{A}^{3})\;(^{T_{1}}AS\;x_{2})))$.
+$e_{A}^{1}=\lambda x_{1}:T_{1}.e_{A}^{3}$ by canonical forms (Lemma \ref{cf}).  $SA^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{A}^{3})\rightarrow\lambda x_{2}.(SA^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{A}^{3})\;(^{T_{1}}AS\;x_{2})))$.
 \end{subcase}
 \begin{subcase}
 $T=\forall X_{1}.T_{1}$
 
-$e_{A}^{1}=\Lambda X_{1}.e_{A}^{3}$ by canonical forms (Lemma \ref{cf}).  $SA^{\forall X_{1}.T_{1}}\;(\Lambda X_{1}.e_{A}^{3})\rightarrow\Lambda X_{2}.(SA^{T_{1}[X_{2}/X_{1}]}\;((\Lambda X_{1}.e_{A}^{3})\;\lbrace X_{2}\rbrace))$.
+$e_{A}^{1}\in\lbrace\Lambda X_{1}.e_{A}^{3},{^{\forall X_{1}.T_{1}}A}S\;v_{S}\rbrace$ by canonical forms (Lemma \ref{cf}).  If $e_{A}^{1}=\Lambda X_{1}.e_{A}^{3}$ then $SA^{\forall X_{1}.T_{1}}\;(\Lambda X_{1}.e_{A}^{3})\rightarrow\Lambda X_{2}.(SA^{T_{1}[X_{2}/X_{1}]}\;((\Lambda X_{1}.e_{A}^{3})\;\lbrace X_{2}\rbrace))$.  If $e_{A}^{1}={^{\forall X_{1}.T_{1}}A}S\;v_{S}$ then it reduces by Case \ref{as}.
 \end{subcase}
 \begin{subcase}
 $T=[T_{1}]$
@@ -25,7 +25,7 @@ If $A=H$ then $SA^{[T_{1}]}\;e_{A}$ is a value.  If $A=M$ then $e_{A}^{1}=\matht
 \begin{subcase}
 $T=L$
 
-$e_{A}^{1}=\,^{L}AS\;v_{S}$ by canonical forms (Lemma \ref{cf}).  $SA^{T}\;(^{L}AS\;v_{S}\rightarrow v_{S}$.
+$e_{A}^{1}={^{L}A}S\;v_{S}$ by canonical forms (Lemma \ref{cf}).  $SA^{L}\;(^{L}AS\;v_{S})\rightarrow v_{S}$.
 \end{subcase}
 \begin{subcase}
 $T=T_{1}^{a}$
