--- a/proof/lemmas/preservation/type-substitution.tex
+++ b/proof/lemmas/preservation/type-substitution.tex
@@ -1,7 +1,7 @@
 \begin{lemma}
 \label{tes}
 \onehalfspacing
-If $\Gamma,X\vdash_{HM}e_{HM}:T_{1}$ and $\vdash_{HM}T_{2}$ then $\Gamma\vdash_{HM}e_{HM}[T_{2}/X]:T_{1}[T_{2}/X]$.
+If $\Gamma,X\vdash_{A}e_{A}:T_{1}$ and $\vdash_{A}T_{2}$ then $\Gamma\vdash_{A}e_{A}[T_{2}/X]:T_{1}[T_{2}/X]$ where $A\in\lbrace H,M\rbrace$.
 \begin{proof}
 By structural induction.
 \end{proof}
