--- a/proof/cases/progress/sa.tex
+++ b/proof/cases/progress/sa.tex
@@ -10,7 +10,7 @@ $e_{A}^{1}=\overline{n}$ by canonical forms (Lemma \ref{cf}).  $SA^{N}\;\overlin
 \begin{subcase}
 $T=T_{1}\rightarrow T_{2}$
 
-$e_{A}^{1}=\lambda x_{1}:T_{1}.e_{A}^{3}$ by canonical forms (Lemma \ref{cf}).  $SA^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}.e_{A}^{3})\rightarrow\lambda x_{2}.(SA^{T_{2}}\;((\lambda x_{1}:T_{1}.e_{A}^{3})\;(^{T_{1}}AS\;x_{2})))$.
+$e_{A}^{1}=\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A}^{3}$ by canonical forms (Lemma \ref{cf}).  $SA^{T_{1}\rightarrow T_{2}}\;(\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A}^{3})\rightarrow\lambda x_{2}.(SA^{T_{2}}\;((\lambda x_{1}:T_{1}[T_{i}/T_{i}^{a}].e_{A}^{3})\;(^{T_{1}}AS\;x_{2})))$.
 \end{subcase}
 \begin{subcase}
 $T=\forall X_{1}.T_{1}$
