Finished pn corrections.

--- a/proof/cases/preservation/hm-label-hm.tex
+++ b/proof/cases/preservation/hm-label-hm.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $^{T_{1}^{a}}AS\;(SA^{T_{1}^{a}}\;B_{A})\rightarrow B_{A}$ where $(A,B)\in\lbrace(H,e),(M,v)\rbrace$
 
-$^{T_{1}^{a}}AS\;(SA^{T_{1}^{a}}\;B_{A}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}^{a}[T_{i}/T_{i}^{a}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{S}SA^{T_{1}^{a}}\;B_{A}:TST$ by inversion.  $\Gamma\vdash_{A}B_{A}:T_{1}^{a}[T_{i}/T_{i}^{a}]$ by inversion and uniqueness of types.  $\Gamma\vdash_{A}B_{A}:T$ because $T_{1}^{a}[T_{i}/T_{i}^{a}]=T$.
+$^{T_{1}^{a}}AS\;(SA^{T_{1}^{a}}\;B_{A}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=T_{1}^{a}[T_{i}/T_{i}^{a}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}B_{A}:T_{1}^{a}[T_{i}/T_{i}^{a}]$ by inversion and uniqueness of types.  $\Gamma\vdash_{A}B_{A}:T$ because $T_{1}^{a}[T_{i}/T_{i}^{a}]=T$.
 \end{case}
