--- a/proof/cases/preservation/hm-number-hm.tex
+++ b/proof/cases/preservation/hm-number-hm.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $^{N}AB^{N}\;\overline{n}\rightarrow\overline{n}$ where $(A,B)\in\lbrace(H,M),(M,H)\rbrace$
 
-$\vdash_{A}{^{N}A}B^{N}\;\overline{n}:N$ by inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}).  $\vdash_{A}\overline{n}:N$ by inversion and uniqueness of types.
+$\vdash_{A}{^{N}A}B^{N}\;\overline{n}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=N$ and $\vdash_{A}\overline{n}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.
 \end{case}
