--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -1,9 +1,9 @@
 \begin{theorem}
 \label{pn}
 \onehalfspacing
-If $\Gamma\vdash_{A}e_{A}^{1}:T$ and $e_{A}^{1}\rightarrow e_{A}^{2}$ then $\Gamma\vdash_{A}e_{A}^{2}:T$ where $A\in\lbrace H,M,S\rbrace$.
+If $\Gamma\vdash_{A}e_{A}^{1}:T$ and $e_{A}^{1}\rightarrow e_{A}^{2}$ then $\Gamma\vdash_{A}e_{A}^{2}:T$ where $A\in\lbrace H,M\rbrace$.  If $\Gamma\vdash_{S}e_{S}^{1}:TST$ and $e_{S}^{1}\rightarrow e_{S}^{2}$ then $\Gamma\vdash_{S}e_{S}^{2}:TST$.
 \begin{proof}
-By cases on the reduction $e_{A}^{1}\rightarrow e_{A}^{2}$.  Straightforward cases of Scheme preservation are omitted.
+By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\rightarrow e_{S}^{2}$.  Straightforward cases of Scheme preservation are elided.
 \input{cases/preservation/term-application.tex}
 \input{cases/preservation/type-application.tex}
 \input{cases/preservation/if-true.tex}
@@ -27,7 +27,7 @@ By cases on the reduction $e_{A}^{1}\rightarrow e_{A}^{2}$.  Straightforward cas
 \input{cases/preservation/hm-universal-hm.tex}
 \input{cases/preservation/s-universal-hm.tex}
 \input{cases/preservation/s-universal-s.tex}
-\input{cases/preservation/hm-cons-hm.tex}
+\input{cases/preservation/m-cons-h.tex}
 \input{cases/preservation/hm-cons-s.tex}
 \input{cases/preservation/s-head-cons-h.tex}
 \input{cases/preservation/s-tail-cons-h.tex}
