Added m-head-cons-h and m-tail-cons-h.

--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -29,6 +29,8 @@ By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\right
 \input{cases/preservation/s-universal-s.tex}
 \input{cases/preservation/m-cons-h.tex}
 \input{cases/preservation/hm-cons-s.tex}
+\input{cases/preservation/m-head-cons-h.tex}
+\input{cases/preservation/m-tail-cons-h.tex}
 \input{cases/preservation/s-head-cons-h.tex}
 \input{cases/preservation/s-tail-cons-h.tex}
 \input{cases/preservation/s-cons-m.tex}
