Added the missing cons-e-ms ps case.

--- a/proof/theorems/progress.tex
+++ b/proof/theorems/progress.tex
@@ -9,8 +9,8 @@ By structural induction on $e_{A}$.
 \input{cases/progress/term-abstraction-hm.tex}
 \input{cases/progress/term-abstraction-s.tex}
 \input{cases/progress/type-abstraction.tex}
-\input{cases/progress/list-h.tex}
-\input{cases/progress/list-ms.tex}
+\input{cases/progress/cons-e-h.tex}
+\input{cases/progress/cons-v-ms.tex}
 \input{cases/progress/nil-hm.tex}
 \input{cases/progress/nil-s.tex}
 \input{cases/progress/term-application-h.tex}
@@ -19,6 +19,7 @@ By structural induction on $e_{A}$.
 \input{cases/progress/type-application.tex}
 \input{cases/progress/if-hm.tex}
 \input{cases/progress/if-s.tex}
+\input{cases/progress/cons-e-ms.tex}
 \input{cases/progress/arithmetic-hm.tex}
 \input{cases/progress/arithmetic-s.tex}
 \input{cases/progress/field-h.tex}
