Added ps case wrong.

--- a/proof/theorems/progress.tex
+++ b/proof/theorems/progress.tex
@@ -26,6 +26,8 @@ By structural induction on $e_{A}$.
 \input{cases/progress/field-m.tex}
 \input{cases/progress/field-s.tex}
 \input{cases/progress/fix.tex}
+\input{cases/progress/predicate.tex}
+\input{cases/progress/wrong.tex}
 \input{cases/progress/ab.tex}
 \input{cases/progress/as.tex}
 \input{cases/progress/sa.tex}
