Renaming and rearranging pn cases.

--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -10,35 +10,48 @@ By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\right
 \input{cases/preservation/if-false.tex}
 \input{cases/preservation/addition.tex}
 \input{cases/preservation/subtraction.tex}
-\input{cases/preservation/head-cons-h.tex}
-\input{cases/preservation/head-cons-m.tex}
-\input{cases/preservation/tail-cons-h.tex}
-\input{cases/preservation/tail-cons-m.tex}
+\input{cases/preservation/h:head-cons.tex}
+\input{cases/preservation/h:tail-cons.tex}
 \input{cases/preservation/head-nil.tex}
 \input{cases/preservation/tail-nil.tex}
 \input{cases/preservation/fix.tex}
-\input{cases/preservation/hm-number-hm.tex}
-\input{cases/preservation/hm-number-s.tex}
-\input{cases/preservation/hm-number-e.tex}
-\input{cases/preservation/hm-function-hm.tex}
-\input{cases/preservation/hm-function-s.tex}
-\input{cases/preservation/hm-function-e.tex}
-\input{cases/preservation/s-function-hm.tex}
-\input{cases/preservation/hm-universal-hm.tex}
-\input{cases/preservation/s-universal-hm.tex}
-\input{cases/preservation/s-universal-s.tex}
-\input{cases/preservation/m-cons-h.tex}
-\input{cases/preservation/hm-cons-s.tex}
-\input{cases/preservation/m-head-cons-h.tex}
-\input{cases/preservation/m-tail-cons-h.tex}
+\input{cases/preservation/hm+mh:number.tex}
+\input{cases/preservation/hm+mh:function.tex}
+\input{cases/preservation/hm+mh:universal.tex}
+hm:list-cons
+hm+mh:list-nil
+\input{cases/preservation/hs+ms:number.tex}
+\input{cases/preservation/hs+ms:number-error.tex}
+\input{cases/preservation/hs+ms:function.tex}
+\input{cases/preservation/hs+ms:function-error.tex}
+\input{cases/preservation/hs+ms:universal.tex}
+\input{cases/preservation/hs+ms:list-cons.tex}
+\input{cases/preservation/hs+ms:list-nil.tex}
+\input{cases/preservation/hs+ms:list-error.tex}
+\input{cases/preservation/hs+ms:label.tex}
+\input{cases/preservation/hs+ms:label-error.tex}
+\input{cases/preservation/m:head-cons.tex}
+\input{cases/preservation/m:tail-cons.tex}
+\input{cases/preservation/mh:list-head-cons.tex}
+\input{cases/preservation/mh:list-tail-cons.tex}
+\input{cases/preservation/sh+sm:function.tex}
+\input{cases/preservation/sh+sm:universal.tex}
+
+
+
+
+
+
+
+
 \input{cases/preservation/s-head-cons-h.tex}
 \input{cases/preservation/s-tail-cons-h.tex}
 \input{cases/preservation/s-cons-m.tex}
-\input{cases/preservation/hm-nil-s.tex}
-\input{cases/preservation/hm-list-e.tex}
-\input{cases/preservation/hm-label-hm.tex}
-\input{cases/preservation/hm-label-e.tex}
-\input{cases/preservation/hm-type-application-s.tex}
+
+
+
+
+
 \input{cases/preservation/s-lump-s.tex}
 \end{proof}
 \end{theorem}
