--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -36,22 +36,9 @@ hm+mh:list-nil
 \input{cases/preservation/mh:list-tail-cons.tex}
 \input{cases/preservation/sh+sm:function.tex}
 \input{cases/preservation/sh+sm:universal.tex}
-
-
-
-
-
-
-
-
-\input{cases/preservation/s-head-cons-h.tex}
-\input{cases/preservation/s-tail-cons-h.tex}
-\input{cases/preservation/s-cons-m.tex}
-
-
-
-
-
-\input{cases/preservation/s-lump-s.tex}
+\input{cases/preservation/sh:list-head-cons.tex}
+\input{cases/preservation/sh:list-tail-cons.tex}
+\input{cases/preservation/sm:list-cons.tex}
+\input{cases/preservation/sh+sm:lump.tex}
 \end{proof}
 \end{theorem}
