Finished renaming and reordering pn cases.  Added pn case hm:list-cons.

--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -18,8 +18,8 @@ By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\right
 \input{cases/preservation/hm+mh:number.tex}
 \input{cases/preservation/hm+mh:function.tex}
 \input{cases/preservation/hm+mh:universal.tex}
-hm:list-cons
-hm+mh:list-nil
+\input{cases/preservation/hm:list-cons.tex}
+\input{cases/preservation/hm+mh:list-nil.tex}
 \input{cases/preservation/hs+ms:number.tex}
 \input{cases/preservation/hs+ms:number-error.tex}
 \input{cases/preservation/hs+ms:function.tex}
