--- a/model/hitr.tex
+++ b/model/hitr.tex
@@ -6,7 +6,7 @@
 \]
 \bigskip
 \[
-\frac{\Gamma\vdash_{H}T_{1}\quad\Gamma\vdash_{M}T_{2}\quad T_{1}=T_{2}\quad\Gamma\vdash_{M}e_{M}:T_{2}}{\Gamma\vdash_{H}\;^{T_{1}}HM^{T_{2}}\;e_{M}:T_{1}}
+\frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{M}T\quad\Gamma\vdash_{M}e_{M}:T}{\Gamma\vdash_{H}\;^{T}HM^{T}\;e_{M}:T}
 \quad
 \frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{H}\;^{T}HS\;e_{S}:T[T_{i}/T^{a}_{i}]}
 \]
