Removed contexts from top core Scheme typing rules.

--- a/model/sctr.tex
+++ b/model/sctr.tex
@@ -1,14 +1,14 @@
 \begin{figure}
 \[
-\frac{}{\Gamma\vdash_{S}TST}
+\frac{}{\vdash_{S}TST}
 \]
 \bigskip
 \[
-\frac{}{\Gamma\vdash_{S}\overline{n}:TST}
+\frac{}{\vdash_{S}\overline{n}:TST}
 \quad
-\frac{}{\Gamma\vdash_{S}\mathtt{nil}:TST}
+\frac{}{\vdash_{S}\mathtt{nil}:TST}
 \quad
-\frac{}{\Gamma\vdash_{S}\mathtt{wrong}\;\mathrm{string}:TST}
+\frac{}{\vdash_{S}\mathtt{wrong}\;\mathrm{string}:TST}
 \]
 \[
 \frac{x:TST\in\Gamma}{\Gamma\vdash_{S}x:TST}
