--- a/proof/cases/progress/as.tex
+++ b/proof/cases/progress/as.tex
@@ -16,7 +16,7 @@ If $e_{S}^{1}=\lambda x_{1}.e_{S}^{2}$ then $^{T_{1}\rightarrow T_{2}}AS\;(\lamb
 \begin{subcase}
 $T=\forall X.T_{1}$
 
-$^{\forall X.T_{1}}AS\;e_{S}^{1}$ is a value.
+$^{\forall X.T_{1}}AS\;v_{S}^{1}$ is a value.
 \end{subcase}
 \begin{subcase}
 $T=[T_{1}]$
@@ -26,7 +26,7 @@ If $e_{S}^{1}=\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2}$ then $^{[T_{1}]}AS\;(\mathtt{
 \begin{subcase}
 $T=L$
 
-$^{L}AS\;e_{S}^{1}$ is a value.
+$^{L}AS\;v_{S}^{1}$ is a value.
 \end{subcase}
 \begin{subcase}
 $T=T_{1}^{a}$
