--- a/proof/cases/progress/sa.tex
+++ b/proof/cases/progress/sa.tex
@@ -20,7 +20,7 @@ $e_{A}^{1}\in\lbrace\Lambda X_{1}.e_{A}^{3},{^{\forall X_{1}.T_{1}}A}S\;v_{S}\rb
 \begin{subcase}
 $T=[T_{1}]$
 
-$e_{A}^{1}\in\lbrace\mathtt{cons}\;B_{A}^{1}\;B_{A}^{2},\mathtt{nil}^{T_{1}}\rbrace$ by canonical forms (Lemma \ref{cf}).  If $A=H$ and $e_{A}^{1}=\mathtt{cons}\;B_{A}^{1}\;B_{A}^{2}$ then $SA^{[T_{1}]}\;(\mathtt{cons}\;B_{A}^{1}\;B_{A}^{2})$ is a value.  If $A=M$ and $e_{A}^{1}=\mathtt{cons}\;B_{A}^{1}\;B_{A}^{2}$ then $SA^{[T_{1}]}\;(\mathtt{cons}\;B_{A}^{1}\;B_{A}^{2})\rightarrow\mathtt{cons}\;(SA^{T_{1}}\;B_{A}^{1})\;(SA^{[T_{1}]}\;B_{A}^{2})$.  If $e_{A}^{1}=\mathtt{nil}^{T_{1}}$ then $SA^{T_{1}}\;\mathtt{nil}^{T_{1}}\rightarrow\mathtt{nil}$.
+If $A=H$ then $e_{A}^{1}\in\lbrace\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2},\mathtt{nil}^{T_{1}}\rbrace$ by canonical forms (Lemma \ref{cf}).  If $e_{A}^{1}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$ then $SA^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})$ is a value.  If $A=M$ and $e_{A}^{1}=\mathtt{cons}\;B_{A}^{1}\;B_{A}^{2}$ then $SA^{[T_{1}]}\;(\mathtt{cons}\;B_{A}^{1}\;B_{A}^{2})\rightarrow\mathtt{cons}\;(SA^{T_{1}}\;B_{A}^{1})\;(SA^{[T_{1}]}\;B_{A}^{2})$.  If $e_{A}^{1}=\mathtt{nil}^{T_{1}}$ then $SA^{T_{1}}\;\mathtt{nil}^{T_{1}}\rightarrow\mathtt{nil}$.
 \end{subcase}
 \begin{subcase}
 $T=L$
