--- a/model/hios.tex
+++ b/model/hios.tex
@@ -18,6 +18,8 @@ $\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathsc
 && ($v_{S}\neq\lambda x.e_{S}$) \\
 % hm - universal
 $\mathscr{E}[^{\forall X_{1}.T}HM^{\forall X_{1}.T}\;(\Lambda X_{1}.e_{M})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\Lambda X_{2}.(^{T[X_{2}/X_{1}]}HM^{T[X_{2}/X_{1}]}\;((\Lambda X_{1}.e_{M})\;\lbrace X_{2}\rbrace))]$ \\
+% hm - universal ms
+$\mathscr{E}[^{\forall X.T}HM^{\forall X.T}\;(^{\forall X.T}MS\;v_{S})]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{\forall X.T}HS\;v_{S}]$ \\
 % hs - universal
 $\mathscr{E}[(^{\forall X.T_{1}}HS\;v_{S})\;\lbrace T_{2}\rbrace]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}[T^{a}_{2}/X]}HS\;v_{S}]$ \\
 % hm - list - cons
