--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -25,6 +25,7 @@ By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\right
 \input{cases/preservation/hs+ms:function-error.tex}
 \input{cases/preservation/sh+sm:function.tex}
 \input{cases/preservation/hm+mh:universal.tex}
+\input{cases/preservation/hm+mh:universal-ms+hs.tex}
 \input{cases/preservation/hs+ms:universal.tex}
 \input{cases/preservation/sh+sm:universal.tex}
 \input{cases/preservation/hm:list-cons.tex}
