Added two new reduction rules to hios and mios for L AB L (BS L v).

--- a/model/hios.tex
+++ b/model/hios.tex
@@ -33,6 +33,8 @@ $\mathscr{E}[^{[T]}HS\;\mathtt{nil}]_{H}$ & $\rightarrow$ & $\mathscr{E}[\mathtt
 % hs - list error
 $\mathscr{E}[^{[T]}HS\;v_{S}^{1}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{[T]}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;list"})]$ \\
 && ($v_{S}^{1}\neq\mathtt{cons}\;v_{S}^{2}\;v_{S}^{3}$ and $v_{S}^{1}\neq\mathtt{nil}$) \\
+% hm - lump
+$\mathscr{E}[^{L}HM^{L}\;(^{L}MS\;v_{S})]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{L}HS\;v_{S}]$ \\
 % hs - label
 $\mathscr{E}[^{T^{a}}HS\;(SH^{T^{a}}\;e_{H})]_{H}$ & $\rightarrow$ & $\mathscr{E}[e_{H}]$ \\
 % hs - label error
