Added reduction rules and ps and pn cases for L AB L (L BS v) to L AS v.

--- a/proof/cases/progress/ab.tex
+++ b/proof/cases/progress/ab.tex
@@ -28,7 +28,7 @@ If $(A,B)=(M,H)$ then $e_{B}^{1}\in\lbrace\mathtt{cons}\;e_{H}^{3}\;e_{H}^{4},\m
 \begin{subcase}
 $T=L$
 
-Cannot occur because $L$ occurs only in $^{L}AS\;e_{S}$.
+$e_{B}^{1}={^{L}B}S\;v_{S}$ by canonical forms (Lemma \ref{cf}).  $^{L}AB^{L}\;(^{L}BS\;v_{S})\rightarrow{^{L}A}S\;v_{S}$.
 \end{subcase}
 \begin{subcase}
 $T=T_{1}^{a}$
