--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -38,6 +38,7 @@ By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\right
 \input{cases/preservation/hm+mh:list-nil.tex}
 \input{cases/preservation/hs+ms:list-nil.tex}
 \input{cases/preservation/hs+ms:list-error.tex}
+\input{cases/preservation/hm+mh:lump.tex}
 \input{cases/preservation/hs+ms:label.tex}
 \input{cases/preservation/hs+ms:label-error.tex}
 \end{proof}
