--- a/proof/cases/progress/ab.tex
+++ b/proof/cases/progress/ab.tex
@@ -21,7 +21,7 @@ $e_{B}^{1}\in\lbrace\Lambda X_{1}.e_{B}^{2},{^{\forall X_{1}.T_{1}}B}S\;v_{S}\rb
 \begin{subcase}
 $T=[T_{1}]$
 
-If $(A,B)=(H,M)$ then $e_{B}^{1}\in\lbrace\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2},\mathtt{nil}^{T_{1}},{^{[T]}M}H^{[T]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})\rbrace$ by canonical forms (Lemma \ref{cf}).  If $e_{B}^{1}=\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2}$ then $^{[T_{1}]}HM^{[T_{1}]}\;(\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2})\rightarrow\mathtt{cons}\;(^{T_{1}}HM^{T_{1}}\;v_{M}^{1})\;(^{[T_{1}]}HM^{[T_{1}]}\;v_{M}^{2})]$.  If $e_{B}^{1}=\mathtt{nil}^{T_{1}}$ then $^{[T_{1}]}HM^{[T_{1}]}\;\mathtt{nil}^{T}\rightarrow\mathtt{nil}^{T}$.  $^{[T_{1}]}HM^{[T_{1}]}\;(^{[T_{1}]}MH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}))$ is a value.
+If $(A,B)=(H,M)$ then $e_{B}^{1}\in\lbrace\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2},\mathtt{nil}^{T_{1}},{^{[T_{1}]}M}H^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})\rbrace$ by canonical forms (Lemma \ref{cf}).  If $e_{B}^{1}=\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2}$ then $^{[T_{1}]}HM^{[T_{1}]}\;(\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2})\rightarrow\mathtt{cons}\;(^{T_{1}}HM^{T_{1}}\;v_{M}^{1})\;(^{[T_{1}]}HM^{[T_{1}]}\;v_{M}^{2})]$.  If $e_{B}^{1}=\mathtt{nil}^{T_{1}}$ then $^{[T_{1}]}HM^{[T_{1}]}\;\mathtt{nil}^{T}\rightarrow\mathtt{nil}^{T}$.  If $e_{B}^{1}={^{[T_{1}]}M}H^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})$ then $^{[T_{1}]}HM^{[T_{1}]}\;(^{[T_{1}]}MH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}))\rightarrow\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$.
 
 If $(A,B)=(M,H)$ then $e_{B}^{1}\in\lbrace\mathtt{cons}\;e_{H}^{3}\;e_{H}^{4},\mathtt{nil}^{T_{1}}\rbrace$ by canonical forms.  If $e_{B}^{1}=\mathtt{cons}\;e_{H}^{3}\;e_{H}^{4}$ then $^{[T_{1}]}MH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{3}\;e_{H}^{4})$ is a value.  If $e_{B}^{1}=\mathtt{nil}^{T_{1}}$ then $^{[T_{1}]}MH^{[T_{1}]}\;\mathtt{nil}^{T_{1}}\rightarrow\mathtt{nil}^{T_{1}}$.
 \end{subcase}
