--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -29,9 +29,11 @@ By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\right
 \input{cases/preservation/hs+ms:universal.tex}
 \input{cases/preservation/sh+sm:universal.tex}
 \input{cases/preservation/hm:list-cons.tex}
+\input{cases/preservation/hm:list-mh-cons.tex}
 \input{cases/preservation/mh:list-head-cons.tex}
 \input{cases/preservation/mh:list-tail-cons.tex}
 \input{cases/preservation/hs+ms:list-cons.tex}
+\input{cases/preservation/hs:list-sh-cons.tex}
 \input{cases/preservation/sh:list-head-cons.tex}
 \input{cases/preservation/sh:list-tail-cons.tex}
 \input{cases/preservation/sm:list-cons.tex}
