More fixes following the new reduction rules for list and forall values.

--- a/proof/cases/progress/as.tex
+++ b/proof/cases/progress/as.tex
@@ -21,7 +21,7 @@ $^{\forall X.T_{1}}AS\;v_{S}^{1}$ is a value.
 \begin{subcase}
 $T=[T_{1}]$
 
-If $e_{S}^{1}=\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2}$ then $^{[T_{1}]}AS\;(\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2})\rightarrow\mathtt{cons}\;(^{T_{1}}AS\;v_{S}^{1})\;(^{[T_{1}]}AS\;v_{S}^{2})$.  If $e_{S}^{1}=SH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{1})$ then $^{[T_{1}]}AS\;(SH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{1}))\rightarrow\mathtt{cons}\;e_{H}^{1}\;e_{H}^{1}$.  $^{[T_{1}]}AS\;e_{S}^{1}\rightarrow{^{[T_{1}]}A}S\;(\mathtt{wrong}\;\mathrm{``Not\;a\;list"})$ otherwise.
+If $e_{S}^{1}=\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2}$ then $^{[T_{1}]}AS\;(\mathtt{cons}\;v_{S}^{1}\;v_{S}^{2})\rightarrow\mathtt{cons}\;(^{T_{1}}AS\;v_{S}^{1})\;(^{[T_{1}]}AS\;v_{S}^{2})$.  If $A=H$ and $e_{S}^{1}=SH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{1})$ then $^{[T_{1}]}HS\;(SH^{[T_{1}]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{1}))\rightarrow\mathtt{cons}\;e_{H}^{1}\;e_{H}^{1}$.  $^{[T_{1}]}AS\;e_{S}^{1}\rightarrow{^{[T_{1}]}A}S\;(\mathtt{wrong}\;\mathrm{``Not\;a\;list"})$ otherwise.
 \end{subcase}
 \begin{subcase}
 $T=L$
