--- a/proof/lemmas/preservation/evaluation-context-preservation.tex
+++ b/proof/lemmas/preservation/evaluation-context-preservation.tex
@@ -3,6 +3,6 @@
 \onehalfspacing
 If $\Gamma\vdash_{A}e_{A}^{1}:T_{1}$, $\Gamma\vdash_{A}e_{A}^{2}:T_{2}$, and $\mathscr{E}[e_{A}^{1}]:T_{1}$ then $\mathscr{E}[e_{A}^{2}]:T_{2}$ where $A\in\lbrace H,M,S\rbrace$.
 \begin{proof}
-By structural induction because typing rules use types and not forms of subterms.
+By structural induction.
 \end{proof}
 \end{lemma}
