Removed backslash-comma spacing.

--- a/proof/cases/progress/as.tex
+++ b/proof/cases/progress/as.tex
@@ -33,5 +33,5 @@ $T=T_{1}^{a}$
 
 If $e_{S}^{1}=SA^{T_{1}^{a}}\;e_{A}^{1}$ then $^{T_{1}^{a}}AS\;(SA^{T_{1}^{a}}\;e_{A}^{1})\rightarrow e_{A}^{1}$.  $^{T_{1}^{a}}AS\;e_{S}^{1}\rightarrow{^{T_{1}^{a}}A}S\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"})$ otherwise.
 \end{subcase}
-If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $^{T}AS\;e_{S}^{1}\rightarrow\,^{T}AS\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $^{T}AS\;e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
+If $e_{S}^{1}\rightarrow e_{S}^{2}$ then $^{T}AS\;e_{S}^{1}\rightarrow{^{T}A}S\;e_{S}^{2}$.  If $e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string} then $^{T}AS\;e_{S}^{1}\rightarrow$ \emph{\textbf{Error}:\;string}.
 \end{case}
