Added new reduction rules to HMS to remove stuck states.  All lang values should be covered now.

--- a/model/hios.tex
+++ b/model/hios.tex
@@ -17,7 +17,7 @@ $\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;(\lambda x_{1}.e_{S})]_{H}$ & $\righta
 $\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"})]$ \\
 && ($v_{S}\neq\lambda x.e_{S}$) \\
 % hm - universal
-$\mathscr{E}[^{\forall X_{1}.T}HM^{\forall X_{1}.T}\;(\Lambda X_{1}.e_{M})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\Lambda X_{2}.(^{T[X_{2}/X_{1}]}HM^{T[X_{2}/X_{1}]}\;((\Lambda X_{1}.e_{M})\;\lbrace X_{2}\rbrace))]$ \\
+$\mathscr{E}[^{\forall X.T}HM^{\forall X.T}\;(\Lambda X.e_{M})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\Lambda X.(^{T}HM^{T}\;e_{M})]$ \\
 % hm - universal ms
 $\mathscr{E}[^{\forall X.T}HM^{\forall X.T}\;(^{\forall X.T}MS\;v_{S})]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{\forall X.T}HS\;v_{S}]$ \\
 % hs - universal
