--- a/model/sios.tex
+++ b/model/sios.tex
@@ -13,6 +13,7 @@ $\mathscr{E}[SM^{\forall X.T}\;(^{\forall X.T}MS\;v_{S})]_{S}$ & $\rightarrow$ &
 $\mathscr{E}[\mathtt{hd}\;(SH^{[T]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}))]_{S}$ & $\rightarrow$ & $\mathscr{E}[SH^{T}\;e_{H}^{1}]$ \\
 $\mathscr{E}[\mathtt{tl}\;(SH^{[T]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}))]_{S}$ & $\rightarrow$ & $\mathscr{E}[SH^{[T]}\;e_{H}^{2}]$ \\
 $\mathscr{E}[(SM^{[T]}\;(\mathtt{cons}\;v_{M}^{1}\;v_{M}^{2})]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{cons}\;(SM^{T}\;v_{M}^{1})\;(SM^{[T]}\;v_{M}^{2})]$ \\
+$\mathscr{E}[SM^{[T]}\;(^{[T]}MH^{[T]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}))]_{S}$ & $\rightarrow$ & $\mathscr{E}[SH^{[T]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})]$ \\
 $\mathscr{E}[SH^{[T]}\;\mathtt{nil}^{T}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{nil}]$ \\
 $\mathscr{E}[SM^{[T]}\;\mathtt{nil}^{T}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{nil}]$ \\
 $\mathscr{E}[SH^{L}\;(^{L}HS\;v_{S})]_{S}$ & $\rightarrow$ & $\mathscr{E}[v_{S}]$ \\
